--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
           color: #666;
           line-height: 1.6;
       }
+    p.tip
+    {
+        text-align: right;
+        font-size: 12px;
+    }
   </style>  
   </head>
   <body>
@@ -33,10 +38,16 @@
         <h1>欢迎来到我的页面</h1>
         <p>这是一个非常简单的页面，用来展示基本的HTML结构。</p>
         <p>你可以在这里添加更多的内容，比如图片、链接或者其他元素。</p>   
+        <p class="tip">Tips：🔮右下角可直接联系到我，或许需要魔法才能看见</p>
             <script src="https://embed.small.chat/T040YAPN8JEC06UPRX2FPS.js" async>
               // SmallChat 官方插入代码；
             </script>  
         </p>
+        <hr>
+        <blockquote>
+            <img src="/resources/img/01.0245bc9d.png" alt="kimi" style="width: 54px;height: 54px;">
+            本页面大部分的代码由 Kimi 完成的。PS:本人只是整理组合发布。
+        </blockquote>
     </div> 
 </body>
 </html>
