--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </p>
         <hr>
         <blockquote>
-            <img src="https://github.com/Boyue1988/Slack-Smallchat/blob/main/resources/img/01.0245bc9d.png" alt="kimi" style="width: 54px;height: 54px;">
+            <img src="resources/img/01.0245bc9d.png" alt="kimi" style="width: 54px;height: 54px;">
             本页面大部分的代码由 Kimi 完成的。PS:本人只是整理组合发布。
         </blockquote>
     </div> 
