--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         text-align: right;
         font-size: 12px;
     }
+    blockquote
+    {
+        font-size: 14px;
+    }
   </style>  
   </head>
   <body>
